--- a/lib/smc/Makefile
+++ b/lib/smc/Makefile
@@ -1,10 +1,8 @@
 ARCH = arm
 
-OBJS = rkmodbus.o rkcrc.o rkser.o
+OBJS = rksmc.o rkser.o
 
-CFLAGS = -Wall -DDEBUG -I../src -I../depend/include -I../common -c
-
-TARGET = libmodbus.so
+TARGET = libsmc.so
 
 ifeq ($(ARCH), arm)
 CC = /usr/local/arm/3.4.3-rockontrol/bin/arm-linux-gcc
@@ -12,8 +10,10 @@ else
 CC = gcc
 endif
 
-vpath %.c ../src
-vpath %.h ../include
+CFLAGS = -Wall -DDEBUG -I../../src -I../../depend/include -I../../common -c
+
+vpath %.c ../../src ./src
+vpath %.h 
 
 all : $(TARGET)
 
